--- a/training/debugging.qmd
+++ b/training/debugging.qmd
@@ -227,6 +227,8 @@ then `restartSpades()` and debug the event.
 [`?showMethods()`](https://www.rdocumentation.org/packages/methods/versions/3.6.2/topics/showMethods) -- useful to find out what methods of a function
 you may want to activate debugging for
 
+An example of debugging a more complex SpaDES workflow in @sec-LandRdebug
+
 [Debugging -- Advanced R](https://adv-r.hadley.nz/debugging.html)
 
 [How to make a
